public/css/base.css
/* ... */
.toolbar .button, .button.button-bub {
  line-height: 27px;
  border: none;
  background: none;
  border-radius: 100%;
  padding: 5px;
  width: 37px;
  height: 37px;
  text-align: center;
  color: #333;
}
.button.button-bub.bub {
  border-radius: 20px/20px;
  width: auto;
  padding: 5px 10px;
}

.toolbar .button:hover, .toolbar .button.pop-out-shown,
.button.button-bub:hover, .button.button-bub.pop-out-shown,
#emoticons li:hover {
  background: #eee;
}
.button.button-bub.subscribe {
  margin-top: -10px;
  color: #ccc;
}
.button.button-bub.subscribe .fa.fa-check {
  color: #00f;
}
.button.button-bub.subscribe .fa.fa-bell-slash {
  color: #f00;
}

.mail_derpy {
  text-align: center;
  padding-top: 100px;
  padding-bottom: 100px;
  border: none;
}
.mail_derpy .derpy {
  background: url(/images/mail_1.png) center/contain no-repeat;
  height: 200px;
}

.popper .pop-out {
  margin-top: 10px;
  border-radius: 5px;
}
.popper.pop-left #emoticons {
  right: 0;
  left: auto;
}
.popper.pop-right #emoticons {
  left: 0;
  right: auto;
}


.pop-out-shown::before,
.pop-out-shown::after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 50%;
  border-right: 11px solid transparent;
  border-left: 11px solid transparent;
  z-index: 999;
}

.pop-out-shown::before {
  margin-left: -12px;
  border-bottom: 12px solid #d6d6d6;
}
.pop-out-shown::after {
  margin-left: -12px;
  margin-bottom: -1px;
  border-bottom: 12px solid #fff;
}

.split-button.pop-out-shown::before,
.split-button.pop-out-shown::after {
  bottom: -12px;
}
.split-button.pop-out-shown > .pop-out {
  margin-top: 12px;
}

.pop-out-shown.invert .pop-out {
  bottom: 100%;
  top: auto;
}
.pop-out-shown.invert::before,
.pop-out-shown.invert::after {
  border-bottom: none;
  top: -1px;
}
.pop-out-shown.invert::before {
  border-top: 12px solid #d6d6d6;
  margin-top: 1px;
}
.pop-out-shown.invert::after {
  border-top: 12px solid #fff;
  margin-bottom: 0;
}

ul.notifications {
  list-style: none;
  padding: 20px;
}
.notification {
  border: solid 1px rgba(0,0,0,0.1);
}
.notification + .notification {
  border-top: none;
}
.notification a {
  display: inline-block;
  padding: 10px;
  text-decoration: none;
  font-weight: initial;
}
.notification .remove {
  color: #e00;
}
.notification .action {
  color: #88e;
}
.notification:hover {
  background: rgb(250,250,250);
}
.notification.unread {
  background: rgba(200,250,200,0.6);
}
.notification::before {
  font: normal normal normal 14px/1 FontAwesome;
  display: block;
  float: left;
  padding: 10px;
  color: #337287;
}
.notification[class*=comments_]::before {
  content: "\f064";
}
.notification[class*=reports_]::before {
  content: "\f11e";
}
.notification[class*=comment_threads_]::before {
  content: "\f075";
}

img.iconic, img.emoticon {
  background: none;
  border: none;
  box-shadow: none;
}

.icon {
  cursor: default;
}
.action .icon {
  cursor: pointer;
}

img.emoticon {
  max-height: 27px;
  margin: 0 -5px 0 0;
  padding: 0 1px 0 1px;
  vertical-align: middle;
}

.popup-container {
  position: absolute;
  min-width: 25%;
  max-width: 80%;
  text-align: left;
  z-index: 3000;
}
.popup-container .properties {
  width: 800px;
  max-width: 100%;
}
.popup-container .loader {
  width: 100%;
  text-align: center;
  font-size: 50px;
  line-height: 200px;
  height: 200px;
  color: #ddd;
}
.popup-container .popup {
  transition: box-shadow 0.35s linear;
  border-radius: 5px;
  background: #fff;
}
.popup-container.focus .popup {
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.3);
}
.popup-container .popup .content {
  background: #fff;
  min-height: 100px;
  min-width: 400px;
  border-radius: 0 0 5px 5px;
}
.popup-container .popup .content {
  margin-bottom: -5px;
}

.modal {
  background: #fff;
  min-height: 100px;
}
.popup-container .popup .content .message_content {
  padding: 10px 20px;
  min-height: 50px;
}
.modal .foot,
.popup-container .popup .content .foot {
  display: block;
  overflow: hidden;
  background: rgba(180,180,180,0.1);
  padding: 10px;
}
.popup-container .popup > h1 {
  border: none;
  cursor: move;
  background: #fff;
  position: relative;
  margin: 0;
  padding: 15px;
  font-size: 15px;
  border-radius: 5px 5px 0 0;
}
.popup-container .popup h1 > .fa {
  margin-right: 5px;
}
.popup-container .popup .close {
  float: right;
  cursor: pointer;
  color: inherit;
}
.popup-container .popup .close::before {
  font-family: "FontAwesome";
  content: "\f00d";
  color: inherit;
  font-size: 18px;
}

.popup-container.thin,
.popup-container.thin .popup .content {
  min-width: 300px;
}

.popup-container.thin .popup > h1 {
  border-bottom: 1px solid rgba(0,0,150, 0.3);
}

.fades > div:first-child {
  transition: opacity 0.25s linear;
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0,0,0,.2);
  z-index: 2000;
}

.fade-away {
  position: relative;
}
.fade-away::after {
  pointer-events: none;
  position: absolute;
  content: '';
  bottom: 0;
  height: 50%;
  right: 0;
  left: 0;
  background: -webkit-linear-gradient(0deg, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
  background: linear-gradient(0deg, rgba(255,255,255,1) 30%, rgba(255,255,255,0) 100%);
}

.right {
  float: right;
}
.left {
  float: left;
}

.center {
  text-align: center;
}

.small {
  font-size: 25%;
}

i.red {
  color: #ec4848;
}
i.green {
  color: #7bb042;
}

.paginator .pagination {
  text-align: center;
}

ul.waiting, .tab.waiting {
  position: relative;
  opacity: 0.2;
  transition: opacity 0.5s ease;
}
ul.waiting::after, .tab.waiting::after {
  content: '\f110';
  position: absolute;
  top: 50%;
  left: 50%;
  margin-top: -12px;
  margin-left: -12px;
  -webkit-animation: fa-spin 1s infinite steps(8);
  animation: fa-spin 1s infinite steps(8);
  font: normal normal normal 24px/1 FontAwesome;
}

.underline > span, .underline a {
  border-bottom: dotted 1px #aaa;
}
/* ... */

